<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="4"
        android:columnCount="6">

        <Button
            android:id="@+id/btnOne"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:onClick="operatorFunction"
            android:text="@string/one"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:background="@color/blackDove"
            android:layout_row="0"
            android:layout_column="0"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/btnTwo"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:onClick="operatorFunction"
            android:text="@string/two"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:background="@color/blackDove"
            android:layout_row="0"
            android:layout_column="1"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/btnThree"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:onClick="operatorFunction"
            android:text="@string/three"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:background="@color/blackDove"
            android:layout_row="0"
            android:layout_column="2"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:onClick="operatorFunction"
            android:text="@string/divide"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:background="@color/blackDove"
            android:layout_row="0"
            android:layout_column="3"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/btnFour"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:onClick="operatorFunction"
            android:text="@string/four"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:background="@color/blackDove"
            android:layout_row="1"
            android:layout_column="0"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/btnFive"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:onClick="operatorFunction"
            android:text="@string/five"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:background="@color/blackDove"
            android:layout_row="1"
            android:layout_column="1"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/btnSix"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:onClick="operatorFunction"
            android:text="@string/six"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:background="@color/blackDove"
            android:layout_row="1"
            android:layout_column="2"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/btnSubtract"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:onClick="operatorFunction"
            android:text="@string/subtract"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:background="@color/blackDove"
            android:layout_row="1"
            android:layout_column="3"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/btnSeven"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:onClick="operatorFunction"
            android:text="@string/seven"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:background="@color/blackDove"
            android:layout_row="2"
            android:layout_column="0"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/btnEight"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:onClick="operatorFunction"
            android:text="@string/eight"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:background="@color/blackDove"
            android:layout_row="2"
            android:layout_column="1"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/btnNine"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:onClick="operatorFunction"
            android:text="@string/nine"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:background="@color/blackDove"
            android:layout_row="2"
            android:layout_column="2"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:onClick="operatorFunction"
            android:text="@string/plus"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:background="@color/blackDove"
            android:layout_row="2"
            android:layout_column="3"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:onClick="operatorFunction"
            android:text="@string/clear"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:background="@color/blackDove"
            android:layout_row="3"
            android:layout_column="0"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/btnZero"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:onClick="operatorFunction"
            android:text="@string/zero"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:background="@color/blackDove"
            android:layout_row="3"
            android:layout_column="1"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/btnMultiplication"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:onClick="operatorFunction"
            android:text="@string/x"
            android:textAllCaps="false"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:background="@color/blackDove"
            android:layout_row="3"
            android:layout_column="2"
            tools:targetApi="lollipop" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnResult"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:onClick="operatorFunction"
            android:text="@string/result"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:background="@color/orange"
            app:backgroundTint="@color/orange"
            android:layout_row="3"
            android:layout_column="3"
            tools:targetApi="lollipop" />


    </GridLayout>
</RelativeLayout>